force-app/main/default/objects/SiebelContact__x/SiebelContact__x.object-meta.xml
<CustomObject>
    <description>SiebelContact</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelContact</externalName>
    <label>Contatto Siebel</label>
    <pluralLabel>Contatti Siebel</pluralLabel>
</CustomObject>