force-app/main/default/objects/SiebelContact__x/fields/ATTRIB_29__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_29__c</fullName>
    <description>ATTRIB_29</description>
    <externalDeveloperName>ATTRIB_29</externalDeveloperName>
    <label>Emesso il</label>
    <type>Date</type>
</CustomField>