force-app/main/default/objects/SiebelContact__x/fields/ATTRIB_44__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_44__c</fullName>
    <description>ATTRIB_44</description>
    <externalDeveloperName>ATTRIB_44</externalDeveloperName>
    <label>Nato a</label>
    <length>100</length>
    <type>Text</type>
</CustomField>