force-app/main/default/objects/SiebelContact__x/fields/ATTRIB_46__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_46__c</fullName>
    <description>ATTRIB_46</description>
    <externalDeveloperName>ATTRIB_46</externalDeveloperName>
    <label>Emesso a</label>
    <length>100</length>
    <type>Text</type>
</CustomField>