force-app/main/default/objects/SiebelContact__x/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <description>CITY</description>
    <externalDeveloperName>CITY</externalDeveloperName>
    <label>Comune</label>
    <length>50</length>
    <type>Text</type>
</CustomField>