force-app/main/default/objects/SiebelContact__x/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <description>COMMENTS</description>
    <externalDeveloperName>COMMENTS</externalDeveloperName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>