force-app/main/default/objects/SiebelContact__x/fields/LAST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LAST_NAME__c</fullName>
    <description>LAST_NAME</description>
    <externalDeveloperName>LAST_NAME</externalDeveloperName>
    <label>Cognome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>