force-app/main/default/objects/SiebelContact__x/fields/PROVINCE__c.field-meta.xml
<CustomField>
    <fullName>PROVINCE__c</fullName>
    <description>PROVINCE</description>
    <externalDeveloperName>PROVINCE</externalDeveloperName>
    <label>Provincia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>