force-app/main/default/objects/SiebelContact__x/fields/REFERENCE_TYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>REFERENCE_TYPE_CD__c</fullName>
    <description>REFERENCE_TYPE_CD</description>
    <externalDeveloperName>REFERENCE_TYPE_CD</externalDeveloperName>
    <label>Ruolo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>