force-app/main/default/objects/SiebelContact__x/fields/REL_TYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>REL_TYPE_CD__c</fullName>
    <description>REL_TYPE_CD</description>
    <externalDeveloperName>REL_TYPE_CD</externalDeveloperName>
    <label>Tipo Relazione CD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>