force-app/main/default/objects/SiebelContact__x/fields/SOC_SECURITY_NUM__c.field-meta.xml
<CustomField>
    <fullName>SOC_SECURITY_NUM__c</fullName>
    <description>SOC_SECURITY_NUM</description>
    <externalDeveloperName>SOC_SECURITY_NUM</externalDeveloperName>
    <label>Codice Fiscale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>