force-app/main/default/objects/SiebelContact__x/fields/TITLE__c.field-meta.xml
<CustomField>
    <fullName>TITLE__c</fullName>
    <description>TITLE</description>
    <externalDeveloperName>TITLE</externalDeveloperName>
    <label>Titolo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>