force-app/main/default/objects/SiebelContact__x/fields/X_CONS_PROFILAZIONE_SI__c.field-meta.xml
<CustomField>
    <fullName>X_CONS_PROFILAZIONE_SI__c</fullName>
    <description>X_CONS_PROFILAZIONE_SI</description>
    <externalDeveloperName>X_CONS_PROFILAZIONE_SI</externalDeveloperName>
    <label>Flg consenso profilazione Si</label>
    <length>1</length>
    <type>Text</type>
</CustomField>