force-app/main/default/objects/SiebelContact__x/fields/X_DATA_CONS_PROFILAZIONE__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_CONS_PROFILAZIONE__c</fullName>
    <description>X_DATA_CONS_PROFILAZIONE</description>
    <externalDeveloperName>X_DATA_CONS_PROFILAZIONE</externalDeveloperName>
    <label>Data consenso profilazione</label>
    <type>DateTime</type>
</CustomField>