force-app/main/default/objects/SiebelContact__x/fields/X_DATA_LAST_UPD_PRIVACY__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_LAST_UPD_PRIVACY__c</fullName>
    <description>X_DATA_LAST_UPD_PRIVACY</description>
    <externalDeveloperName>X_DATA_LAST_UPD_PRIVACY</externalDeveloperName>
    <label>Data consenso privacy</label>
    <type>DateTime</type>
</CustomField>