force-app/main/default/objects/SiebelContact__x/fields/X_EVENTO__c.field-meta.xml
<CustomField>
    <fullName>X_EVENTO__c</fullName>
    <description>X_EVENTO</description>
    <externalDeveloperName>X_EVENTO</externalDeveloperName>
    <label>Evento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>