force-app/main/default/objects/SiebelContact__x/fields/X_FLG_INCLUDI__c.field-meta.xml
<CustomField>
    <fullName>X_FLG_INCLUDI__c</fullName>
    <description>X_FLG_INCLUDI</description>
    <externalDeveloperName>X_FLG_INCLUDI</externalDeveloperName>
    <label>Includi</label>
    <length>1</length>
    <type>Text</type>
</CustomField>