force-app/main/default/objects/SiebelContact__x/fields/X_ISTAT_LOC__c.field-meta.xml
<CustomField>
    <fullName>X_ISTAT_LOC__c</fullName>
    <description>X_ISTAT_LOC</description>
    <externalDeveloperName>X_ISTAT_LOC</externalDeveloperName>
    <label>Codice comune (Istat)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>