force-app/main/default/objects/SiebelContact__x/fields/X_ISTAT_VIA__c.field-meta.xml
<CustomField>
    <fullName>X_ISTAT_VIA__c</fullName>
    <description>X_ISTAT_VIA</description>
    <externalDeveloperName>X_ISTAT_VIA</externalDeveloperName>
    <label>Codice via stradario Sap</label>
    <length>30</length>
    <type>Text</type>
</CustomField>