force-app/main/default/objects/SiebelContact__x/fields/X_PRIVACY_TUTTO_SI__c.field-meta.xml
<CustomField>
    <fullName>X_PRIVACY_TUTTO_SI__c</fullName>
    <description>X_PRIVACY_TUTTO_SI</description>
    <externalDeveloperName>X_PRIVACY_TUTTO_SI</externalDeveloperName>
    <label>Flg consenso privacy Si</label>
    <length>1</length>
    <type>Text</type>
</CustomField>