force-app/main/default/objects/SiebelContact__x/fields/X_RAG_SOCIALE__c.field-meta.xml
<CustomField>
    <fullName>X_RAG_SOCIALE__c</fullName>
    <description>X_RAG_SOCIALE</description>
    <externalDeveloperName>X_RAG_SOCIALE</externalDeveloperName>
    <label>Reg. Web Rag. Sociale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>