force-app/main/default/objects/SiebelContact__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>FST_NAME__c</columns>
    <columns>X_RAG_SOCIALE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>