force-app/main/default/objects/SiebelContact__x/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>